{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 187,
  "lineage": "ffc6e087-8c42-c75a-2bfe-8d414c55f218",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-09T07:47:32.842-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alfred-rc1-a2df/global/firewalls/nomadl7-ilb-fw-allow-iap-hc",
            "log_config": [],
            "name": "nomadl7-ilb-fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/nomadl7-ilb-network",
            "priority": 1000,
            "project": "alfred-rc1-a2df",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/firewalls/nomadl7-ilb-fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_ilb_to_backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-09T07:47:32.889-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alfred-rc1-a2df/global/firewalls/nomadl7-ilb-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "nomadl7-ilb-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/nomadl7-ilb-network",
            "priority": 1000,
            "project": "alfred-rc1-a2df",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/firewalls/nomadl7-ilb-fw-allow-ilb-to-backends",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-04-09T07:49:28.437-07:00",
            "id": "projects/alfred-rc1-a2df/regions/europe-west1/forwardingRules/nomadl7-ilb-forwarding-rule",
            "ip_address": "10.0.1.34",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "nomadl7-ilb-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/nomadl7-ilb-network",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "alfred-rc1-a2df",
            "recreate_closed_psc": false,
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/europe-west1/forwardingRules/nomadl7-ilb-forwarding-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/europe-west1/subnetworks/nomadl7-ilb-subnet",
            "target": "https://www.googleapis.com/compute/beta/projects/alfred-rc1-a2df/regions/europe-west1/targetHttpProxies/nomadl7-ilb-target-http-proxy"
          },
          "dependencies": [
            "google_compute_health_check.autohealing",
            "google_compute_instance_template.instance_template",
            "google_compute_network.ilb_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_region_target_http_proxy.default",
            "google_compute_region_url_map.default",
            "google_compute_subnetwork.ilb_subnet",
            "google_compute_subnetwork.proxy_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ilb_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/alfred-rc1-a2df/global/networks/nomadl7-ilb-network",
            "mtu": 0,
            "name": "nomadl7-ilb-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3549543104601741485",
            "project": "alfred-rc1-a2df",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/nomadl7-ilb-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/europe-west1/instanceGroups/nomadl7-ilb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-04-09T07:48:30.501-07:00",
            "enable_cdn": false,
            "fingerprint": "xgC612Gb0ng=",
            "generated_id": 48037309634374609,
            "health_checks": [
              "projects/alfred-rc1-a2df/regions/europe-west1/healthChecks/nomadl7-ilb-hc"
            ],
            "id": "projects/alfred-rc1-a2df/regions/europe-west1/backendServices/nomadl7-ilb-backend-subnet",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "nomadl7-ilb-backend-subnet",
            "port_name": "http",
            "project": "alfred-rc1-a2df",
            "protocol": "HTTP",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/europe-west1/backendServices/nomadl7-ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.autohealing",
            "google_compute_instance_template.instance_template",
            "google_compute_network.ilb_network",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-09T07:49:08.398-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/europe-west1/backendServices/nomadl7-ilb-backend-subnet",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Jb-znG-jMqQ=",
            "host_rule": [],
            "id": "projects/alfred-rc1-a2df/regions/europe-west1/urlMaps/nomadl7-ilb-regional-url-map",
            "map_id": 3534346681379777419,
            "name": "nomadl7-ilb-regional-url-map",
            "path_matcher": [],
            "project": "alfred-rc1-a2df",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/europe-west1/urlMaps/nomadl7-ilb-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_health_check.autohealing",
            "google_compute_instance_template.instance_template",
            "google_compute_network.ilb_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2024-04-08T23:55:23.586-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/alfred-rc1-a2df/regions/europe-west1/subnetworks/nomadl7-ilb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "nomadl7-ilb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/nomadl7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alfred-rc1-a2df",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/europe-west1/subnetworks/nomadl7-ilb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.ilb_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2024-04-09T07:47:34.667-07:00",
            "gateway_address": "10.128.0.1",
            "id": "projects/alfred-rc1-a2df/regions/europe-west1/subnetworks/nomadl7-ilb-proxy-subnet",
            "ip_cidr_range": "10.128.0.0/24",
            "name": "nomadl7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/nomadl7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alfred-rc1-a2df",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "europe-west1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/europe-west1/subnetworks/nomadl7-ilb-proxy-subnet"
          },
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    }
  ]
}